#67 Arrays.List -> List.of로 변경